--- a/styles.css
+++ b/styles.css
@@ -165,11 +165,29 @@ nav ul li a:hover::after {
   transition: 0.5s;
 }
 
-/* .tab-links:hover::after {
-  width: 100%;
-} */
+.tab-links.active-link::after {
+  width: 50%;
+}
 
-/*Services section */
+.tab-contents ul li {
+  list-style: none;
+  margin: 10px 0;
+}
+
+.tab-contents ul li span {
+  color: #b54769;
+  font-size: 14px;
+}
+
+.tab-contents {
+  display: none;
+}
+
+.tab-contents.active-tab {
+  display: block;
+}
+
+/* Services section */
 
 #services {
   padding: 30px 0;
